--- a/package.json
+++ b/package.json
@@ -26,16 +26,16 @@
     "login"
   ],
   "dependencies": {
-    "bcrypt": "^0.8.7",
-    "joi": "^9.1.0",
-    "jsonwebtoken": "^7.1.9",
-    "lodash": "^4.16.4",
-    "passport": "^0.3.2",
-    "trailpack": "^1.0.5",
-    "trails-controller": "^1.0.0-beta-2",
-    "trails-model": "^1.0.0-beta-2",
-    "trails-policy": "^1.0.2",
-    "trails-service": "^1.0.0-beta-2"
+    "bcrypt": "0.8.7",
+    "joi": "9.1.0",
+    "jsonwebtoken": "7.1.9",
+    "lodash": "4.16.4",
+    "passport": "0.3.2",
+    "trailpack": "1.0.5",
+    "trails-controller": "1.0.0-beta-2",
+    "trails-model": "1.0.0-beta-2",
+    "trails-policy": "1.0.2",
+    "trails-service": "1.0.0-beta-2"
   },
   "devDependencies": {
     "eslint": "^3.7.1",
